# kbeta

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kbeta/: __init__.py
src/kbeta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kbeta/examples/transformer_char_lm/: README.md  testbed_d.py
src/kbeta/optim/: __init__.py  kbeta_softmax.py
tests/: test_ablation_fast_1.py  test_ablation_fast_2.py  test_optim_smoke.py  test_semantics.py
