[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "kbeta"
version         = "1.0.0"
description     = "Kourkoutas-β optimiser and demo workloads"
authors         = [{name = "Stavros Kassinos"}]
readme          = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies    = ["mlx"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage      = "https://github.com/sck-at-ucy/kbeta"
Documentation = "https://github.com/sck-at-ucy/kbeta"
Repository    = "https://github.com/sck-at-ucy/kbeta"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "numpy",
    "matplotlib",
]

repro = [
    "mlx==0.26.3",
    "pytest",
    "ruff",
    "numpy",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where   = ["src"]
include = ["kbeta*"]

[tool.setuptools.package-data]
"kbeta" = ["py.typed"]

# -------------------------------------------
# Ruff configuration
# -------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 88
src            = ["src", "examples"]
exclude        = [".venv*", "tests/.venv*"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
